--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/kfarzan13/Project-3-BookManagement#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "mongoose": "^6.7.3",
     "nodemon": "^2.0.20"
   }
